--- a/app/src/main/res/layout/game_fragment.xml
+++ b/app/src/main/res/layout/game_fragment.xml
@@ -18,7 +18,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- TODO (01) Add a GameViewModel variable to the layout -->
+    <!-- TODO (01) Add a GameViewModel variable to the layout //DONE-->
+    <data>
+        <variable
+            name="gameViewModel"
+            type="com.example.android.guesstheword.screens.game.GameViewModel" />
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/game_layout"
@@ -92,7 +97,7 @@
             app:layout_constraintStart_toStartOf="parent"
             tools:text="Score: 2" />
 
-        <!-- TODO (02) Use the viewmodel variable to add onClick attributes for both buttons
+        <!-- TODO (02) Use the viewmodel variable to add onClick attributes for both buttons //DONE
         that call the associated methods in the GameViewModel -->
         <Button
             android:id="@+id/skip_button"
@@ -106,7 +111,8 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintHorizontal_chainStyle="spread_inside"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/guideline" />
+            app:layout_constraintTop_toTopOf="@+id/guideline"
+            android:onClick="@{() -> gameViewModel.onSkip()}"/>
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline"
@@ -126,7 +132,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/skip_button"
-            app:layout_constraintTop_toTopOf="@+id/guideline" />
+            app:layout_constraintTop_toTopOf="@+id/guideline"
+            android:onClick="@{() -> gameViewModel.onCorrect()}"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
