--- a/app/src/main/res/layout/score_fragment.xml
+++ b/app/src/main/res/layout/score_fragment.xml
@@ -18,7 +18,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- TODO (04) Add a ScoreViewModel variable to the layout -->
+    <!-- TODO (04) Add a ScoreViewModel variable to the layout //DONE-->
+    <data>
+        <variable
+            name="scoreViewModel"
+            type="com.example.android.guesstheword.screens.score.ScoreViewModel" />
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/score_layout"
@@ -61,7 +66,7 @@
             app:layout_constraintVertical_chainStyle="packed"
             tools:text="40" />
 
-        <!-- TODO (05) Use the viewmodel variable to add onClick attributes for the button
+        <!-- TODO (05) Use the viewmodel variable to add onClick attributes for the button //DONE
         that call the associated method in the ScoreViewModel -->
         <Button
             android:id="@+id/play_again_button"
@@ -72,7 +77,8 @@
             android:theme="@style/GoButton"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            android:onClick="@{() -> scoreViewModel.onPlayAgain()}"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
