--- a/app/src/main/res/layout/game_fragment.xml
+++ b/app/src/main/res/layout/game_fragment.xml
@@ -48,7 +48,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed" />
 
-        <!-- TODO (01) For score_text and word_text use the LiveData from GameViewModel to set the
+        <!-- TODO (01) For score_text and word_text use the LiveData from GameViewModel to set the //DONE
         text attribute -->
 
         <TextView
@@ -67,7 +67,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/word_is_text"
             app:layout_constraintVertical_chainStyle="packed"
-            tools:text="&quot;Tuna&quot;" />
+            tools:text="&quot;Tuna&quot;"
+            android:text="@{@string/quote_format(gameViewModel.word)}"/>
 
         <TextView
             android:id="@+id/timer_text"
@@ -98,7 +99,8 @@
             app:layout_constraintBottom_toTopOf="@+id/guideline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:text="Score: 2" />
+            tools:text="Score: 2"
+            android:text="@{@string/score_format(gameViewModel.score)}"/>
 
         <Button
             android:id="@+id/skip_button"
