--- a/app/src/main/res/layout/score_fragment.xml
+++ b/app/src/main/res/layout/score_fragment.xml
@@ -48,7 +48,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed" />
 
-        <!-- TODO (04) Use the LiveData from ScoreViewModel to set the score_text text attribute -->
+        <!-- TODO (04) Use the LiveData from ScoreViewModel to set the score_text text attribute //DONE-->
         <TextView
             android:id="@+id/score_text"
             android:layout_width="wrap_content"
@@ -65,7 +65,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/you_scored_text"
             app:layout_constraintVertical_chainStyle="packed"
-            tools:text="40" />
+            tools:text="40"
+            android:text="@{scoreViewModel.score.toString()}"/>
 
         <Button
             android:id="@+id/play_again_button"
